--- a/applicationDesignPattern/index.html
+++ b/applicationDesignPattern/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <section class="hero is-primary is-bold">
       <div class="hero-body">
@@ -26,10 +27,9 @@
       </div>
     </section>
     <div class="container">
-     <div class="autocomplete"></div>
+      <div class="autocomplete"></div>
     </div>
-    <script src="utls.js"></script> 
+    <script src="utils.js"></script>
     <script src="index.js"></script>
-    
   </body>
 </html>
